--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       </div>
       <div class="intro-card card-3">
         <img src="assets/developer.png" alt="Developer Icon" />
-        <p>Created by <a href="https://github.com/ZAR0X">Zarox</a>. Visit my GitHub for details.</p>
+        <p>Fornt-End: <a href="https://github.com/ZAR0X">Zarox</a>,<br>Back-End: <a href="https://github.com/vauth">Vauth</a>.</p>
       </div>
     </div>
     <div class="chat-container">
